Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19566

Event Viewer Log Properties : missing keyboard navigation

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.15-dev-8021-g7ce96fd-x86-gcc-lin-dbg

      • Open Event Viewer
      • Open Log properties
      • Select one of the 3 radiobutton
      • keyboard navigation is not working
      • This is due to the same cause as CORE-19564 and CORE-19327
      • IDC_OVERWRITE_AS_NEEDED, IDC_OVERWRITE_OLDER_THAN and IDC_NO_OVERWRITE all have the WS_GROUP, while only IDC_OVERWRITE_AS_NEEDED should.
      • IDC_NO_OVERWRITE has to be moved just next to IDC_OVERWRITE_AS_NEEDED and IDC_OVERWRITE_OLDER_THAN.

      As explained in MSDN below (in particular all other controls in the group must have been consecutively created and must not have the WS_GROUP) : https://learn.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-getnextdlggroupitem 

       

      The GetNextDlgGroupItem function searches controls in the order (or reverse order) they were created in the dialog box template. The first control in the group must have the WS_GROUP style; all other controls in the group must have been consecutively created and must not have the WS_GROUP style. 

      Patch (for en_US.rc, to be applied to all other .rc of this module)

       

      Attachments

        Issue Links

          Activity

            People

              MayTheChicken MayTheChicken
              KRosUser KRosUser
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: