[0.4.10][EVENTVWR] Some rc-backports CORE-19566 CORE-17699

Ports back some rc-tweaks, mostly but not exclusively:
0.4.15-dev-8301-g bf4c09b331922c0ca7b51e39712ddea80c2e9fc1 [EVENTVWR] Tweak AUTORADIOBUTTONS, … (#7106)

0.4.15-dev-8060-g ad8392602e9605ee9991760587bb5702fe0e9443 [EVENTVWR] Fix missing keyboard navigation (#6835) CORE-19566

0.4.15-dev-2947-g 59e1b7848ba4731162e16aa2424d91854ffa78cd [EVENTVWR] Update other languages RCs also (capital L) CORE-17699

0.4.15-dev-2946-g 95f64a200fe64862dc70335e8db00144370503fa [EVENTVWR] Update de-DE.rc CORE-17699

size of eventvwr.exe shrinks on all rls-branches:
master          RosBEWin2.2.2 GCC8.4.0 dbg x86             395.264 (0.4.15-dev-8303-gf16e625)
releases/0.4.14 RosBEWin2.2.2 GCC8.4.0 dbg x86  374.784 -> 370.688
releases/0.4.14 RosBEWin2.1.6 GCC4.7.2 dbg x86  361.984 -> 357.888
releases/0.4.13 RosBEWin2.1.6 GCC4.7.2 dbg x86  361.472 -> 357.376
releases/0.4.12 RosBEWin2.1.6 GCC4.7.2 dbg x86  361.984 -> 357.888
releases/0.4.11 RosBEWin2.1.6 GCC4.7.2 dbg x86  361.984 -> 357.888
releases/0.4.10 RosBEWin2.1.6 GCC4.7.2 dbg x86  361.984 -> 357.376
releases/0.4. 9 RosBEWin2.1.6 GCC4.7.2 dbg x86  361.984 -> 350.720
releases/0.4. 8 RosBEWin2.1.6 GCC4.7.2 dbg x86  331.776 -> 322.560
releases/0.4. 7 RosBEWin2.1.6 GCC4.7.2 dbg x86  332.288 -> 322.560